force-app/main/default/objects/Questionnaire_Type__c/Questionnaire_Type__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Type</label>
    <nameField>
        <displayFormat>QET-{00000}</displayFormat>
        <label>Questionnaire Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>