force-app/main/default/objects/Questionnaire_Type__c/fields/Custom_Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Questionnaire_Type__c</fullName>
    <description>Provide name for non-standard questionaire type</description>
    <label>Custom Questionnaire Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>