force-app/main/default/objects/Questionnaire_Type__c/fields/Enable_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enable_Notes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox used to identify whether a questionnaire should have notes enabled.</description>
    <label>Enable Notes</label>
    <type>Checkbox</type>
</CustomField>