force-app/main/default/objects/Questionnaire_Type__c/fields/Enable_Uploads__c.field-meta.xml
<CustomField>
    <fullName>Enable_Uploads__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox used to identify whether a questionnaire should have uploads enabled.</description>
    <label>Enable Uploads</label>
    <type>Checkbox</type>
</CustomField>