force-app/main/default/objects/Questionnaire_Type__c/fields/Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Type__c</fullName>
    <description>Questionnaire Types to define questions to be chosen</description>
    <label>Questionnaire Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop Review</fullName>
            </value>
            <value>
                <fullName>Site Inspection</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>A &amp; A Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>